<resources>
    <string name="Continue">Continue</string>
    <string name="_import">Import</string>
    <string name="_new">New</string>
    <string name="_switch">Switch</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="action">Action</string>
    <string name="actionGetDeviceConfigurationInformation">Get device configuration information</string>
    <string name="action_done">Done</string>
    <string name="action_martin1">Martin 1</string>
    <string name="action_martin2">Martin 2</string>
    <string name="action_modes">Modes</string>
    <string name="action_pd120">PD 120</string>
    <string name="action_pd160">PD 160</string>
    <string name="action_pd180">PD 180</string>
    <string name="action_pd240">PD 240</string>
    <string name="action_pd290">PD 290</string>
    <string name="action_pd50">PD 50</string>
    <string name="action_pd90">PD 90</string>
    <string name="action_pick_picture">@string/pick_photo</string>
    <string name="action_play">@string/start</string>
    <string name="action_robot36">Robot 36</string>
    <string name="action_robot72">Robot 72</string>
    <string name="action_rotate">Rotate Image</string>
    <string name="action_save_wave">Save Wave File</string>
    <string name="action_scottie1">Scottie 1</string>
    <string name="action_scottie2">Scottie 2</string>
    <string name="action_scottie_dx">Scottie DX</string>
    <string name="action_share">Share</string>
    <string name="action_stop">@string/stop</string>
    <string name="action_take_picture">@string/take_photo</string>
    <string name="action_wraaseSC2_180">Wraase SC2 180</string>
    <string name="addMark">Add Mark</string>
    <string name="addRadioSettings">Add radio settings</string>
    <string name="advancedSettings">Advanced settings</string>
    <string name="alarm">Alarm</string>
    <string name="alarmFrom">Alarm from:%s</string>
    <string name="alarm_and_mute">Alarm And Mute</string>
    <string name="alert">Alert</string>
    <string name="alert_attempt_connection_text">Attempt to reconnect</string>
    <string name="alert_attempt_connection_title">Device disconnected</string>
    <string name="alert_connection_failed_ok">Try again</string>
    <string name="alert_connection_failed_text">We are not able to reconnect to the device, please try again once the device will be ready.</string>
    <string name="all_offline">All cities</string>
    <string name="allowScan">Allow scan</string>
    <string name="allow_position_check">Allow position check</string>
    <string name="alreadyJoinedMembers">Already joined members</string>
    <string name="amateur_radio_satellite">Amateur radio satellite</string>
    <string name="analyze">Analyze</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="ap_2_h2_changes">"
 1. Support offline routing of bss data packets
 2. Add start TX tone
 3. Add PTT lock support
 4. Add signaling preamble switch
"</string>
    <string name="ap_2_h2_md5">741eb4ea9b2489bf11612cc2ccbbdc13</string>
    <string name="app_name">HT</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="aprs">APRS</string>
    <string name="aprs_ch_sm">Set the channel used for APRS, the device will automatically monitor this channel. And send APRS messages and location reports on this channel.</string>
    <string name="aprs_settings">APRS settings</string>
    <string name="audio_connection">Audio Connection</string>
    <string name="audio_relay">Audio relay</string>
    <string name="auto">Auto</string>
    <string name="autoPowerOn">Auto Power On</string>
    <string name="autoShareLocationOverInternet">Auto share location over internet</string>
    <string name="auto_scan">Auto scan</string>
    <string name="auto_share_loc_ch">Select the channel used to send the location report</string>
    <string name="automaticShutDown">Automatic shut-down</string>
    <string name="automaticallyShareLocation">Automatically share location</string>
    <string name="availableDevices">Available devices</string>
    <string name="back">Back</string>
    <string name="backToMyPlace">Back to my place</string>
    <string name="backspace">Backspace</string>
    <string name="bandwidth">Bandwidth</string>
    <string name="be_2_changes">"
 Support button function configuration"</string>
    <string name="be_2_md5">8ce57e1b92a71acb2d8e064fb190a6c8</string>
    <string name="bearing_f">Bearing %.0f</string>
    <string name="bind">Bind</string>
    <string name="bindNetworkChannel">Bind network channel</string>
    <string name="bindNewDevice">Pair New Device</string>
    <string name="binding">Binding</string>
    <string name="bitRates">Bit Rates</string>
    <string name="ble_location_permission_description">"In order to scan for BLE Bluetooth devices, the app needs to have access to the device's location."</string>
    <string name="ble_location_service_description">Your phone needs to turn on location services to scan BLE Bluetooth devices. Please turn on location services.</string>
    <string name="bluetooth_is_off">Bluetooth is off</string>
    <string name="bold">Bold</string>
    <string name="bondingRadioAndNetworkChannel">Bonding radio and network channel</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="broadband">Broadband</string>
    <string name="broadcastChannelConfiguration">Broadcast channel configuration …</string>
    <string name="bss_aprs_routing">BSS/APRS Digipeater</string>
    <string name="bss_routing">BSS Routing</string>
    <string name="bt_double_click">Double Click</string>
    <string name="bt_long">Long Press</string>
    <string name="bt_pairing">Pairing</string>
    <string name="bt_press_down">Press down</string>
    <string name="bt_short_single">Short Single</string>
    <string name="btn_ok">OK</string>
    <string name="btn_send_email">Send Email</string>
    <string name="buy_now">Buy now</string>
    <string name="call">Call</string>
    <string name="callFrom">Call from:%s</string>
    <string name="callMode">Call mode</string>
    <string name="callRequestHasBeenSent">Call request has been sent</string>
    <string name="callSign">Call sign</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="canNotGetYourLocation">Can not get your location</string>
    <string name="canNotStartRecording">"Can not start recording
check whether the microphone is occupied
or
did not open the recording permission"</string>
    <string name="cancelAdminRight">Cancel Admin Right</string>
    <string name="cancelBan">Cancel Ban</string>
    <string name="cancelled">Cancelled</string>
    <string name="changeRegion">Switch Channel group</string>
    <string name="channel">Channel</string>
    <string name="clear">Clear</string>
    <string name="digitalMute">Digital mute</string>
    <string name="disableTx">Disable TX</string>
    <string name="dmr_rx_color">RX Color</string>
    <string name="dmr_slot">Slot</string>
    <string name="dmr_tx_color">TX Color</string>
    <string name="factory_data_reset">Factory data reset</string>
    <string name="headphoneMode">Headphone mode</string>
    <string name="headphoneModeDescription"><b>Voice Mode</b>": When the headset is connected to the phone at the same time, the phone call will not be affected by the intercom 
"<b>Call mode</b>: If <b>Voice Mode</b> is not working, try</string>
    <string name="keepAgAudioLink">Keep headset connected</string>
    <string name="lock_channel_data">Lock channel data</string>
    <string name="map_type">Map type</string>
    <string name="map_type_default">Default</string>
    <string name="microphoneGain">Microphone gain</string>
    <string name="more">More</string>
    <string name="mute">Mute</string>
    <string name="offline">Talk Around</string>
    <string name="pairing_at_power_on">Enter pairing mode at power on</string>
    <string name="patrolSystemID">Patrol System ID</string>
    <string name="power_saving_mode">Power saving mode</string>
    <string name="pre_de_emph">Pre/De-emphasis</string>
    <string name="reset">Reset</string>
    <string name="reset_settings">Reset settings</string>
    <string name="rxCTCSS">Rx CTCSS/DCS</string>
    <string name="rx_freq">Rx Freq</string>
    <string name="satelliteGoogle">Satellite (Google)</string>
    <string name="satelliteTianditu">Satellite (Tianditu)</string>
    <string name="scanningAnswerMode">PTT Follow</string>
    <string name="search_hint">Type to start searching</string>
    <string name="signaling">Signaling</string>
    <string name="signalingPreamble">Signaling preamble</string>
    <string name="tail_elimination">Tail elimination</string>
    <string name="terrainGoogle">Terrain (Google)</string>
    <string name="terrainOpenTopoMap">Terrain (OpenTopoMap)</string>
    <string name="title">Title</string>
    <string name="tone">Tone</string>
    <string name="txCTCSS">Tx CTCSS/DCS</string>
    <string name="txPower">Tx Power</string>
    <string name="tx_freq">Tx Freq</string>
    <string name="tx_hold_time">Tx hold time</string>
    <string name="tx_time_limit">Tx time limit</string>
    <string name="voice_input">Voice input</string>
    <string name="wirelessMicGain">Wireless mic gain</string>
    <string name="wxChannel">WX Channel</string>
    <string name="wx_mode">WX Mode</string>
</resources>