<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:id="@id/activity_settings" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView android:padding="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/card_margin">
            <androidx.appcompat.widget.LinearLayoutCompat android:orientation="vertical" android:background="?cardBackground" android:layout_width="fill_parent" android:layout_height="wrap_content" app:divider="?android:listDivider" app:dividerPadding="3.0dip" app:showDividers="middle">
                <com.dw.android.widget.CardHeaderView android:layout_width="fill_parent" android:layout_height="wrap_content" app:left_text="@string/map_type" />
                <com.dw.android.widget.ListItemView android:id="@id/default_map" android:layout_width="fill_parent" android:layout_height="fill_parent" app:accessory="DisclosureIndicator" app:title="@string/map_type_default" />
                <com.dw.android.widget.ListItemView android:id="@id/satellite" android:layout_width="fill_parent" android:layout_height="fill_parent" app:accessory="DisclosureIndicator" app:title="@string/satelliteGoogle" />
                <com.dw.android.widget.ListItemView android:id="@id/satellite_tianditu" android:layout_width="fill_parent" android:layout_height="fill_parent" app:accessory="DisclosureIndicator" app:title="@string/satelliteTianditu" />
                <com.dw.android.widget.ListItemView android:id="@id/terrain" android:layout_width="fill_parent" android:layout_height="fill_parent" app:accessory="DisclosureIndicator" app:title="@string/terrainGoogle" />
                <com.dw.android.widget.ListItemView android:id="@id/terrain_OpenTopoMap" android:layout_width="fill_parent" android:layout_height="fill_parent" app:accessory="DisclosureIndicator" app:title="@string/terrainOpenTopoMap" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>