<?xml version="1.0" encoding="utf-8"?>
<merge android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.dw.widget.ActionButton android:layout_gravity="center_vertical" android:id="@id/search_back" android:background="?selectableItemBackground" android:visibility="gone" android:layout_width="36.0dip" android:layout_height="36.0dip" android:layout_marginLeft="8.0dip" android:contentDescription="@string/back" app:srcCompat="@drawable/ic_arrow_back_24dp" app:tint="?android:textColorPrimary" />
    <ImageButton android:layout_gravity="center_vertical" android:id="@id/search_app_icon" android:background="?selectableItemBackground" android:visibility="gone" android:layout_width="36.0dip" android:layout_height="36.0dip" android:layout_marginLeft="8.0dip" />
    <AutoCompleteTextView android:id="@id/search_src_text" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip" android:hint="@string/search_hint" android:layout_weight="1.0" style="?searchBarTextStyle" />
    <FrameLayout android:id="@id/search_view" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0" />
    <ImageButton android:id="@id/search_voice_btn" android:visibility="gone" android:contentDescription="@string/voice_input" style="?searchBarVoiceButtonStyle" />
    <ImageButton android:id="@id/search_clear" android:visibility="gone" android:contentDescription="@string/clear" style="?searchBarClearButtonStyle" />
    <ImageButton android:id="@id/search_go_btn" android:contentDescription="@android:string/search_go" style="?searchBarGoButtonStyle" />
</merge>